# mobile-money

./: .env.config.example  .env.example  .eslintrc.json  .gitguardian  .gitignore  .pre-commit-config.yaml  ABOUT_TYPESCRIPT_ERRORS.md  CHANGES_DETAIL.md  CHANGES_SUMMARY_SEP10_MULTISIG.md  CI_SECURITY_FIX.md  CI_SECURITY_FIX_QUICKREF.md  CONTRIBUTING.md  Dockerfile  EVERYTHING_IS_WORKING.md  FINAL_STATUS.txt  FINAL_VERIFICATION_SUMMARY.md  HEARTBEAT_METRIC_IMPLEMENTATION.md  HEARTBEAT_README.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_SEP10_MULTISIG.md  INDEX.md  ISSUE_1022_COMPLETION_VERIFICATION.md  PACT_IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  PR_DESCRIPTION_ACCOUNTING_SYNC.md  PR_DESCRIPTION_DOCKER_MOCKS.md  PR_DESCRIPTION_ESCROW_FEES.md  README.md  REDIS_AOF_IMPLEMENTATION.md  REDIS_AOF_PERSISTENCE.md  REPLICA_ROUTING_IMPLEMENTATION.md  SEP10_VERIFICATION_CHECKLIST.md  START_HERE.md  TODO.md  TODO_BATCH_PAYOUT.md  TROUBLESHOOTING.md  TYPESCRIPT_ERRORS_CLARIFICATION.md  VERIFICATION_CHECKLIST.md  VERIFICATION_REPORT.md  (+26 more)
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/escrow/test_snapshots/tests/: test_arbiter_refund_after_lock_expired_fails.1.json  test_double_initialize_fails.1.json  test_emergency_refund.1.json  test_fee_rounds_down_correctly.1.json  test_full_lifecycle_with_fee_and_lock.1.json  test_initialize_and_release.1.json  test_initialize_stores_correct_state.1.json  test_initialize_zero_amount_fails.1.json  test_premature_self_refund_before_expiry_fails.1.json  test_refund.1.json  (+11 more)
(+775 files in other folders)
