[package]
name = "escrow"
version = "0.2.0"
edition = "2021"

# Inherit workspace-level lint configuration.
[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "26.0.1", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
